Assignment_Nandini_HTML_Loginpage3_completed_v0.1

--- a/HTML_Tasks/Loginpages/HTML/HtmlPage1.html
+++ b/HTML_Tasks/Loginpages/HTML/HtmlPage1.html
@@ -9,21 +9,21 @@
 <body>
     
         <div class="container">
-            <h3><u>LOGIN</u></h3>
+            <h3><u>Login Page</u></h3>
             <div class="brand">
-                <form name="LogForm">
+                <form>
                     <p>
                         <label>Email or Username</label>
-                        <input type="text" size="40" name="Name"  />
+                        <input type="text" size="40" name="name" text-align="left" />
                     </p>
                     <p>
                         <label>Password</label>
-                        <input type="password" size="40" name="Password" value="......">
+                        <input type="password" size="40" name="pass" text-align="left">
 
-                    </p>
+                    </p><br><br>
                     <p>
                         <input type="checkbox" checked="checked" name="remember">Remember Me &nbsp;&nbsp;&nbsp;
-                        <a href="nextpage.html" text-align="right">Forgot Password?</a><br><br><br>
+                        <a href="HtmlPage3.html" text-align="right">Forgot Password?</a><br><br>
                     </p>
                     <p>
                         <button>Login</button>
