Assignment_Nandini_HTML_Loginpages_completed_v0.2

--- a/HTML_Tasks/ForgotPassword/HTML/Forgotpsw1.html
+++ b/HTML_Tasks/ForgotPassword/HTML/Forgotpsw1.html
@@ -5,6 +5,16 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../CSS/StyleSheet1.css">
     <title>Forgot Password</title>
+    <style>
+        input[type=button] {
+            width: 75px;
+            height: 35px;
+            border: 0;
+            background: blue;
+            color: #ffffff;
+            border-radius: 50px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -20,10 +30,11 @@
                     <label>Email</label>
                     <input type="text" size="40" name="email" />
                 </p><br><br>
-                <p>
-                    <button>Continue</button>
+                        <p>
+                            <input type="button" value="Continue" onclick=" location.href = 'HTMLPage4.html';">
 
-                </p>
+
+                        </p>
             </form>
         </div>
     </div>
