--- a/HTML_Tasks/Loginpages/HTML/Loginpage2.html
+++ b/HTML_Tasks/Loginpages/HTML/Loginpage2.html
@@ -43,7 +43,7 @@
 
                 </p>
                 <p>
-                    <input type="button" value="Login" onclick="location.href = 'HTMLPage2.html';">
+                    <input type="button" value="Login">
 
                 </p>
 
