--- a/HTML_Tasks/Request header/HTML/Request_header.html
+++ b/HTML_Tasks/Request header/HTML/Request_header.html
@@ -87,7 +87,7 @@
 
             <div class="column left">
                 <div style="float:right">
-                    <img src="img_avatar.png" alt="Avatar" class="avatar"><h6 style="font-size:12px;">John Doe</h6>
+                    <img src="../Images/img_avatar.png" alt="Avatar" class="avatar"><h6 style="font-size:12px;">John Doe</h6>
                     <i class="down"></i>
                 </div>
 
