Assignment_Nandini_HTML_completed_v0.2

--- a/HTML_Tasks/RequisitionForms/HTML/Requisitionform6.html
+++ b/HTML_Tasks/RequisitionForms/HTML/Requisitionform6.html
@@ -162,7 +162,7 @@
             </div>
             <div class="column left">
                 <div style="float:right">
-                    <img src="../Images/img_avatar.png" alt="Avatar" class="avatar"><h6 style="font-size:12px; margin-top:20px;">John Deo</h6>
+                    <img src="../Images/img_avatar.png" alt="Avatar" class="avatar" width="24px" height="24px"><h6 style="font-size:12px; margin-top:20px;">John Deo</h6>
                 </div>
             </div>
             <div class="column left">
