Assignment_Nandini_Loginpages_completed_v0.2

--- a/HTML_Tasks_v0.2/HTML_v0.2/Login1.html
+++ b/HTML_Tasks_v0.2/HTML_v0.2/Login1.html
@@ -3,7 +3,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="StyleSheet1.css">
     <title>Login Page</title>
     <style>
         input[type=button]{
@@ -52,7 +51,6 @@ body
 	padding: 1em;
 	width: 1300px;
 	height: 600px;
-	border: 1px solid lightgray;
 	margin:1.5em;
 }
  .brand form {
@@ -71,7 +69,7 @@ body
             
             <form class="brand">
                    <tr> 
-                       <td style="position:relative;left:auto;top:10px;"><h3><u>LOGIN</u></h3></td>
+                       <td style="position:relative;left:150px;top:10px;"><h3><u>LOGIN</u></h3></td>
                        </tr>
 
 
