Nandini_HTML_Requisition_complted_v0.1

--- a/HTML_Tasks_v0.2/HTML_v0.2/Requisition.html
+++ b/HTML_Tasks_v0.2/HTML_v0.2/Requisition.html
@@ -261,10 +261,10 @@
                 <span class="bar"></span>
             </td>
             <td class="column left" style="float:right">
-                <img src="img_avatar.png" alt="Avatar" class="avatar"><h6 style="font-size:12px">John Deo</h6>
+                <img src="../Images_v0.2/img_avatar.png" alt="Avatar" class="avatar"><h6 style="font-size:12px">John Deo</h6>
             </td>
             <td class="column left" style="float:right">
-                <img src="request-icons-05.png" style='font-size:24px;width:20px;height:20px;' id="model1">
+                <img src="../Images_v0.2/request-icons-05.png" style='font-size:24px;width:20px;height:20px;' id="model1">
             </td>
     </table>
     <table class="container">
@@ -273,7 +273,7 @@
             <td class="vertical" style="font-family:Calibri;font-size:14px;">
                 REQUISITION
             </td>
-            <td><img src="request-image-30.png" style="width:80px;height:400px; position:relative;top:30px;left:-25px;"></td>
+            <td><img src="../Images_v0.2/request-image-30.png" style="width:80px;height:400px; position:relative;top:30px;left:-25px;"></td>
 
 
         </tr>
