--- a/HTML_Tasks_v0.2/MyRequsestLists/HTML/HTML using div/List1.html
+++ b/HTML_Tasks_v0.2/MyRequsestLists/HTML/HTML using div/List1.html
@@ -10,12 +10,9 @@
 	color: black;
 	line-height: 1em;
 	font-family: Calibri;
-	padding: 4em;
-	max-width: 200px;
-	max-height:2000px;
-	height:300px;
-    margin-top:100px;
-    margin-left:259px;
+	padding: .5em;
+    margin-top:auto;
+    margin-left:auto;
 }
         .brand {
             background-color: white;
@@ -27,7 +24,6 @@
             text-align: left;
             outline: none;
             font-size: 15px;
-            transition: 0.4s;
             
         }
         .container {
@@ -40,10 +36,6 @@
 	line-height:1em;
 	outline: none;
 	padding: 0.6em 1.45em 0.8em;
-	-webkit-transition: .18s ease-out;
-	-moz-transition: .18s ease-out;
-	-o-transition: .18s ease-out;
-	transition: .18s ease-out;
 }
 	.container:focus {
 		color: #b6ff00;
@@ -51,42 +43,22 @@
 		box-shadow: inset 1px 2px 4px rgba(0,0,0,0.1) 0px 0px 8px rgba(0,0,0,0.2);
 	}
 .container {
-	max-width: 200px;
+	max-width: 150px;
 	max-height: 300px;
-	width: 640px;
 	height: 510px;
-	margin-left: -25px;
+	margin-left:auto;
 	margin-right: auto;
-	border-radius: 10px;
-    margin-top:-10px;
+    margin-top:auto;
 }
         </style>
         </head >
 <body>
-    <table class="container">
-        <tr>
-            <td>
-    <button class="brand"><b>CLEAR</b></button></td>
-</tr>
-    <tr>    
-        <td>
-            <button class="brand" style="color:lightgray;">APPROVED</button>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <button class="brand"><b>DRAFT</b></button>
-                </td>
-            </tr>
-        <tr>
-            <td>
-                <button class="brand"><b>AWAITING</b></button>
-             </td>
-        </tr>
-        <tr>
-            <td><button class="brand"><b>REJECTED</b></button>
-            </td>
-        </tr>
-    </table>
+    <div class="container">
+    <button class="brand"><b>CLEAR</b></button>
+    <button class="brand" style="color:lightgray;">APPROVED</button>
+    <button class="brand"><b>DRAFT</b></button>
+    <button class="brand"><b>AWAITING</b></button>
+    <button class="brand"><b>REJECTED</b></button>
+        </div>
 </body>
         </html >
