Assignment_Nandini_HTML_completed_v0.2

--- a/HTML_Tasks_v0.2/MyRequsestLists/HTML/HTML using div/RequestList_page7.html
+++ b/HTML_Tasks_v0.2/MyRequsestLists/HTML/HTML using div/RequestList_page7.html
@@ -222,7 +222,7 @@
         </div>
         <div class="column left">
             <div style="float:right">
-                <img src="../../IMages/img_avatar.png" alt="Avatar" class="avatar"><h6 style="font-size:12px">John Deo</h6>
+                <img src="../../Images/img_avatar.png" alt="Avatar" class="avatar"><h6 style="font-size:12px">John Deo</h6>
             </div>
         </div>
         <div class="column left">
