--- a/HTML_Tasks_v0.2/Login/HTML/HTML using div/Nandini_HTML_Div_LoginPage1.html
+++ b/HTML_Tasks_v0.2/Login/HTML/HTML using div/Nandini_HTML_Div_LoginPage1.html
@@ -3,38 +3,43 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../../CSS/StyleSheet1.css">
+    <link rel="stylesheet" type="text/css" href="StyleSheet1.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet " />
     <title>Login Page</title>
     <style>
         input[type=button] {
             width: 133px;
             height: 35px;
             border: 0;
-            background:#32BDD2;
+            background: #32BDD2;
             color: #ffffff;
             border-radius: 21px;
+        }
+        .horizontal{
+
         }
     </style>
 </head>
 <body>
 <div class="container">
-        <h3><u>LOGIN</u></h3>
+        <h3>LOGIN</h3>
+    <hr class="horizontal">
         <div class="brand"> 
             
                 <form>
                     <p>
                         <label>Email or Username</label>
-                        <input type="text" size="40" name="name"  style="border-radius:4px;"/>
+                        <input type="text"  name="name"  style="border-radius:6px;width:50%;height:30px;"/>
 
                     </p>
                     <p>
                         <label>Password</label>
-                        <input type="password" size="40" name="pass" style="border-radius:4px;">
+                        <input type="password"  name="pass" style="border-radius:6px;width:50%;height:30px;">
 
                     </p>
                     <p>
-                        <input type="checkbox">Remember Me&nbsp;&nbsp;&nbsp;
-                        <a href="HtmlPage3.html" text-align="right" style="margin-left:70px">Forgot Password?</a><br><br>
+                        <input type="checkbox">Remember Me
+                        <a href="HtmlPage3.html" text-align="right" style="margin-left:10%;color:#707070">Forgot Password?</a><br><br>
 
                     </p>
                     <p>
