--- a/HTML_Tasks_v0.3/ForgotPassword/HTML/HTML using div/Nandini_ForgotPasswordDiv2.html
+++ b/HTML_Tasks_v0.3/ForgotPassword/HTML/HTML using div/Nandini_ForgotPasswordDiv2.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div style="padding-top:2%;padding-left:2%;padding-right:2%;padding-bottom:2%;background: #F6F8F9;">
-        <div style="box-shadow: 0px 0px 10px #00000029;background:#FFFFFF;padding:8%;border-radius:21px">
+        <div style="box-shadow: 0px 0px 10px #00000029;background:#FFFFFF;padding:6%;border-radius:21px">
             <div style="margin-left:35%;">
                 <div style="width:100%;">
                     <h5 style="border-bottom:2px solid #000000;float:left"><b>FORGOT PASSWORD</b></h5>
@@ -24,23 +24,23 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     <p>Mauris mattis, tortor sit amet tempor vehicula.</p>
                 </div>
-                <div style="width:100%;padding-top:15%">
+                <div style="width:100%;padding-top:10%">
                     <p style="font-size:12px;color: #505050;color:#505050;">Email</p>
                     <input type="text" name="name" size="46" style="border-radius:4px;height:22px;border:1px solid #D3D3D3;">
                 </div>
 
                 <div style="padding-top:2%;">
                     <div style="float:left;font-size:10px;">
-                        <img src="request-icons-07.png" style="width:12px;height:12px;" />
+                        <img src="../../Images/request-icons-07.png" style="width:12px;height:12px;" />
                         <span style="color:#BF574A;font-size:10px;">This field required</span>
                     </div>
                     <div style="padding-top:4%;">
-                        <img src="request-icons-07.png" style="width:12px;height:12px;" />
+                        <img src="../../Images/request-icons-07.png" style="width:12px;height:12px;" />
                         <span style="color:#BF574A;font-size:10px;">This email is not registered with us</span>
                     </div>
                     <div style="clear:both"></div>
                 </div>
-                <div style="width:100%;padding-top:4%">
+                <div style="width:100%;padding-top:7%">
                     <input type="button" value="CONTINUE" style="background: #32BDD2;font-size: 12px;font-weight: bold;box-shadow: 1px 1px 5px #00000040;border-radius: 21px;color:#FFFFFF;border:1px solid #32BDD2;width:20%;height:40px;">
                 </div>
             </div>
