--- a/HTML_Tasks_v0.3/LoginPages/HTML/HTML using div/Nandini_Login_Div1.html
+++ b/HTML_Tasks_v0.3/LoginPages/HTML/HTML using div/Nandini_Login_Div1.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div style="padding:2%;background: #F6F8F9;">
-        <div style="box-shadow: 0px 0px 10px #00000029;background:#FFFFFF;padding:8%;border-radius:21px">
+        <div style="box-shadow: 0px 0px 10px #00000029;background:#FFFFFF;padding:7%;border-radius:21px">
             <div style="margin-left:35%;">
                 <div style="width:100%;">
                     <h5 style="border-bottom:2px solid #000000;float:left"><b>LOGIN</b></h5>
@@ -29,12 +29,12 @@
 
                     <input type="text" name="pass" placeholder="********" size="46" style="border-radius:4px;height:22px;border:1px solid #D3D3D3;">
                 </div>
-                <div style="padding-top:4%;width:50%">
+                <div style="width:48%;padding-top:3%">
                     <div style="float:left;font-size:10px;">
                         <input type="checkbox" style="border-radius:2px;">Remember me
                     </div>
-                    <div style="float:right">
-                        <p style="color:#707070;font-size:10px;border-bottom:1px solid #000000;">Forgot Password</p>
+                    <div style="float:right;padding-top:3%;">
+                        <p style="color:#707070;font-size:10px;border-bottom:1px solid #000000;position:relative;left:5%;">Forgot Password</p>
                     </div>
                     <div style="clear:both"></div>
                 </div>
