--- a/HTML_Tasks_v0.3/RequisitionForm4/HTML/HTML using table/Nandini_RequisitionForm4_AddApproval.html
+++ b/HTML_Tasks_v0.3/RequisitionForm4/HTML/HTML using table/Nandini_RequisitionForm4_AddApproval.html
@@ -32,7 +32,7 @@
                                         <table style="width:100%">
                                             <tr>
                                                 <td style="padding-left:4%">
-                                                    <p style="font-size:20px;color:#5A5A5A"><b>Add People</b></p>
+                                                    <p style="font-size:20px;color:#5A5A5A"><b>Add Approval</b></p>
                                                 </td>
                                                 <td style="text-align:right">
                                                     <img src="../../Images/request-icons-13.png" style="width:30px" />
@@ -47,7 +47,7 @@
                                             <tr>
                                                 <td >
                                                     <div>
-                                                        <input type="text" value="Search" style="width:109%;height:30px;border-radius:21px;border: 1px solid #B5B5B5;color:#909090" />
+                                                        <input type="text" value="Search" style="padding-left:2%;width:105%;height:30px;border-radius:21px;border: 1px solid #B5B5B5;color:#909090" />
                                                     </div>
                                                 </td>
                                                 <td>
@@ -65,6 +65,7 @@
                                                 <td style="background:#F4F8FA;">
                                                     <table style="width:100%">
                                                         <tr>
+                                                            
                                                             <td style="padding-top:4%;padding-bottom:4%;width:20%" >
                                                                 <img src="../../Images/img_avatar.png" style="width:30px;border-radius:50%" />
                                                             </td>
@@ -76,6 +77,7 @@
                                                                
                                                                 <img src="../../Images/request-icons-10.png" style="width:30px" />
                                                             </td>
+                                                            <td>
                                                         </tr>
                                                         <tr>
                                                             <td style="padding-top:4%;padding-bottom:4%;">
@@ -117,7 +119,7 @@
                                                     </table>
                                                 </td>
                                                 <td style="width:2%">
-                                                    <hr style="transform:rotate(270deg);width:50px"></hr>
+                                                    <hr style="transform:rotate(270deg);width:50px">
                                                 </td>
                                             </tr>
                                         </table>
@@ -132,11 +134,11 @@
                                                 </td>
                                                 <td style="padding-left:18%">
                                                     <div>
-                                                        <input type="text" value="You haven't selected any person" style="border:1px dashed #32BDD2;font-size:12px;color:#747474;border-top-left-radius:21px;border-bottom-left-radius:21px;width:108%;height:26px;font-size:12px"/>
+                                                        <input type="text" value="You haven't selected any person" style="padding-left:6%;border:1px dashed #32BDD2;font-size:12px;color:#747474;border-top-left-radius:21px;border-bottom-left-radius:21px;width:108%;height:26px;font-size:10px"/>
                                                     </div>
                                                 </td>
                                                 <td >
-                                                    <input type="button" value="DONE" style="background: #32BDD2;box-shadow: 1px 1px 5px #00000040;border-radius: 21px;color:#FFFFFF;border:1px solid #32BDD2;width:80%;height:30px;">
+                                                    <input type="button" value="DONE" style="background: #32BDD2;box-shadow: 1px 1px 5px #00000040;font-weight:bold;border-radius: 21px;color:#FFFFFF;border:1px solid #32BDD2;width:90%;height:30px;font-size:10px;">
 
                                                 </td>
                                             </tr>
